--- a/mod-iamx/index.html
+++ b/mod-iamx/index.html
@@ -222,22 +222,22 @@
             <div class="count-wrap">
               <div class="col-sm-3 col-xs-6">
                 <i class="fa fa-flask"></i>
-                <h3 class="timer">7</h3>
+                <h3 class="timer">28</h3>
                 <p>Years of Experience</p>
               </div>
               <div class="col-sm-3 col-xs-6">
                 <i class="fa fa-thumbs-up"></i>
-                <h3 class="timer">651</h3>
-                <p>Projects Done</p>
+                <h3 class="timer">51</h3>
+                <p>Match Done</p>
               </div>
               <div class="col-sm-3 col-xs-6">
                 <i class="fa fa-users"></i>
-                <h3 class="timer">251</h3>
-                <p>Happy Clients</p>
+                <h3 class="timer">100</h3>
+                <p>Enjoy life</p>
               </div>
               <div class="col-sm-3 col-xs-6">
                 <i class="fa fa-trophy"></i>
-                <h3 class="timer">5</h3>
+                <h3 class="timer">130</h3>
                 <p>Awards Won</p>
               </div>
             </div><!-- /count-wrap -->
